<resources>
    <string name="InfoPopupText">To Do\n
version 1.6.4 (2026.07.21)\n
by Trevin Beattie\n
\n
Documentation for this app can be found on its GitHub project page:
https://github.com/Typraeurion/Android-ToDo/releases\n
\n
This program is distributed under the terms of the Gnu Public License,
version 3.0.  The source code may be obtained from the git repository
shown above.\n
\n
Encryption code in this program is derived from the Legion of the
Bouncy Castle Inc under an MIT style license.  (See below.).\n
\n
Some of the images used by this program are reproduced from work
created and shared by the Android Open Source Project and used
according to the terms described in the Creative Commons 2.5
Attribution License.\n
Other images used by this program were created by Trevin Beattie and
are shared according to the terms described in the Creative Commons
3.0 Attribution-ShareAlike License.\n
\n
[Encryption code] Copyright © 2000-2013 The Legion of the Bouncy
Castle Inc. (http://www.bouncycastle.org)\n
Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
\"Software\"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:\n
The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.\n
THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n
</string>
    <string name="about">About&#8230;</string>
    <string name="AlertUnsavedChangesTitle">Unsaved Changes</string>
    <string name="app_name">To Do</string>
    <string name="service_name_alarm">Alarm Service</string>
    <string name="service_name_export">Export Service</string>
    <string name="service_name_import_palm">Import Service (Palm)</string>
    <string name="service_name_import_xml">Import Service (XML)</string>
    <string name="service_name_password_change">Change Password Service</string>
    <string name="AlarmButtonCancel">Cancel</string>
    <string name="AlarmButtonOK">OK</string>
    <string name="AlarmServiceBackgroundMessage">Checking the To Do list for alarms&#8230;</string>
    <string name="AlarmTextAlarm">Alarm</string>
    <string name="AlarmTextDaysEarlier">days earlier</string>
    <string name="AlarmTextTime">Alarm Time:</string>
    <string name="AlarmTextNextAlarm">Next alarm:</string>
    <string name="AlarmTitle">Alarm</string>
    <string name="Category_All">All</string>
    <string name="Category_Edit">Edit categories&#8230;</string>
    <string name="Category_Unfiled">Unfiled</string>
    <string-array name="CategoryFilterList">
        <item>@string/Category_All</item>
        <item>@string/Category_Unfiled</item>
    </string-array>
    <string name="CategoryListButtonCancelText">Cancel</string>
    <string name="CategoryListButtonNewText">New</string>
    <string name="CategoryListButtonOKText">OK</string>
    <string name="ConfirmationTextDeleteNote">Are you sure you wish to delete this note?</string>
    <string name="ConfirmationTextDeleteToDo">Delete this To Do item?</string>
    <string name="ConfirmationButtonCancel">Cancel</string>
    <string name="ConfirmationButtonDiscard">Discard</string>
    <string name="ConfirmationButtonOK">OK</string>
    <string name="ConfirmUnsavedChanges">Your note has been changed; going back will lose all changes.  Do you want to discard these changes or cancel going back and continue editing?</string>
    <string name="DatePickerCancel">Cancel</string>
    <string name="DatePickerFri">F</string>
    <string name="DatePickerMon">M</string>
    <string name="DatePickerSat">S</string>
    <string name="DatePickerSun">S</string>
    <string name="DatePickerTitleDueDate">Due Date</string>
    <string name="DatePickerTitleEndingOn">Ending On</string>
    <string name="DatePickerThu">T</string>
    <string name="DatePickerToday">Today</string>
    <string name="DatePickerTue">T</string>
    <string name="DatePickerWed">W</string>
    <string name="DetailButtonCancel">Cancel</string>
    <string name="DetailButtonDelete">Delete&#8230;</string>
    <string name="DetailButtonOK">OK</string>
    <string name="DetailDescriptionPlaceholder">Description (required)</string>
    <string name="DetailNotset">None</string>
    <string name="DetailTextAlarm">Alarm:</string>
    <string name="DetailTextCategory">Category:</string>
    <string name="DetailTextCompleted">Completed:</string>
    <plurals name="DetailTextDaysEarlier">
        <item quantity="one">%d day earlier</item>
        <item quantity="other">%d days earlier</item>
    </plurals>
    <string name="DetailTextDueDate">Due date:</string>
    <string name="DetailTextHideUntil">Hide until:</string>
    <string name="DetailTextPriority">Priority:</string>
    <string name="DetailTextPrivate">Private:</string>
    <string name="DetailTextRepeat">Repeat:</string>
    <string name="DialogConfirmPassword">Repeat:</string>
    <string name="DialogEnterPassword">Password:</string>
    <string name="DialogExportTo">Data will be written to:&#10;%s</string>
    <string name="DialogNewPassword">New password:</string>
    <string name="DialogOldPassword">Old password:</string>
    <string name="DialogShowPassword">Show password</string>
    <string-array name="DueDateFormatList">
        <item>@string/DueDateFormatToday</item>
        <item>@string/DueDateFormatTomorrow</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatDayOfWeek</item>
        <item>@string/DueDateFormatNextWeek</item>
    </string-array>
    <string name="DueDateFormatDayOfWeek">M/d &#8211; EEEE</string>
    <string name="DueDateFormatNextWeek">M/d &#8211; \'In 1 week\'</string>
    <string name="DueDateFormatToday">M/d &#8211; \'Today\'</string>
    <string name="DueDateFormatTomorrow">M/d &#8211; \'Tomorrow\'</string>
    <string name="DueDateNoDate">No Date</string>
    <string name="DueDateOther">Choose Date&#8230;</string>
    <string name="ErrorDescriptionBlank">The item description is empty.</string>
    <string name="ErrorCannotFind">Cannot find %s</string>
    <string name="ErrorCategoryID">The category is invalid.</string>
    <string name="ErrorDatabaseNotOpen">Could not open the database</string>
    <string name="ErrorExportCantMkdirs">Cannot create directory %s</string>
    <string name="ErrorExportFailed">Export failed</string>
    <string name="ErrorExportPermissionDenied">Permission to write to %s has not been granted.  Please allow access or change the folder then try again.</string>
    <string name="ErrorFailedToAddRecords">Failed to add records</string>
    <string name="ErrorFileNotFound">File not found</string>
    <string name="ErrorImportCantRead">Cannot read file %s</string>
    <string name="ErrorImportFailed">Import failed</string>
    <string name="ErrorImportNotFound">Import file %s not found</string>
    <string name="ErrorImportPermissionDenied">Permission to read %s has not been granted.  Please allow access or move the file to another folder then try again.</string>
    <string name="ErrorNoRecordsImported">No records were imported</string>
    <string name="ErrorNotImplemented">Not yet implemented</string>
    <string name="ErrorPasswordMismatch">New passwords do not match.</string>
    <string name="ErrorPriority">The priority is invalid.</string>
    <string name="ErrorSDNotFound">Storage media not found</string>
    <string name="ErrorTitle">Error</string>
    <string name="ExportButtonCancel">Cancel</string>
    <string name="ExportButtonOK">Export</string>
    <string name="ExportEditDirectoryHint">Folder in which to save the export file</string>
    <string name="ExportEditFileHint">Name of the export file</string>
    <string name="ExportFileDialogTitle">Export To Do File</string>
    <string name="ExportRadioButtonPrivateFolder">Save to app private storage</string>
    <string name="ExportRadioButtonPublicFolder">Save to shared storage</string>
    <string name="ExportTextDirectory">Folder:</string>
    <string name="ExportTextFile">File Name:</string>
    <string name="ExportTextIncludePrivate">Include Private:</string>
    <string name="ExportTextPasswordNotSetWarning">No password has been set.  Private records will not be encrypted.</string>
    <string name="HideButtonCancel">Cancel</string>
    <string name="HideButtonOK">OK</string>
    <string name="HideTextHide">Hide until</string>
    <string name="HideTextDaysEarlier">days earlier</string>
    <string name="HideTextShow">Show after:</string>
    <string name="HideTitle">Hide when not yet due</string>
    <string name="ImportButtonCancel">Cancel</string>
    <string name="ImportButtonOK">Import</string>
    <string name="ImportEditDirectoryHint">Folder containing the import file</string>
    <string name="ImportEditFileHint">Name of the import file</string>
    <string name="ImportEditPasswordHint">Password</string>
    <string name="ImportFileDialogTitle">Import To Do File</string>
    <string name="ImportRadioButtonPrivateFolder">File from app private storage</string>
    <string name="ImportRadioButtonPublicFolder">File from shared storage</string>
    <string name="ImportTextDirectory">Folder:</string>
    <string name="ImportTextFile">File Name:</string>
    <string name="ImportTextImportType">Import Type:</string>
    <string name="ImportTextIncludePrivate">Include Private:</string>
    <string name="ImportTextPassword">Saved Password:</string>
    <string name="ImportTextPasswordNotSetWarning">No password has been entered in Settings.  Private records will not be encrypted!</string>
    <string name="ImportTextShowPassword">Show Password:</string>
    <string-array name="ImportTypeList">
        <item>Clean</item>
        <item>Overwrite</item>
        <item>Update</item>
        <item>Merge</item>
        <item>Add</item>
        <item>Test</item>
    </string-array>
    <string name="InfoButtonOK">OK</string>
    <string name="ListButtonNew">New</string>
    <string name="ListDueDateFormat">M/d</string>
    <string name="MenuExport">Export Data</string>
    <string name="MenuImport">Import Data</string>
    <string name="MenuInfo">About&#8230;</string>
    <string name="MenuLock">Lock Encrypted Records</string>
    <string name="MenuPasswordChange">Change Password</string>
    <string name="MenuPasswordSet">Set Password</string>
    <string name="MenuSearch">Search</string>
    <string name="MenuSettings">Settings</string>
    <string name="MenuUnlock">Unlock Encrypted Records</string>
    <string name="MenuShowCompleted">Toggle Show Completed</string>
    <string name="NoteButtonDelete">Delete&#8230;</string>
    <string name="NoteButtonOK">Done</string>
    <string name="NotePlaceholder">Your note here&#8230;</string>
</resources>