<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@color/white"
  android:orientation="vertical"
  android:scrollbars="vertical"
  android:scrollbarAlwaysDrawVerticalTrack="false"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/LinearLayout01"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">

        <RadioGroup android:id="@+id/ImportFolderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/ImportFolderRadioButtonPrivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ImportRadioButtonPrivateFolder"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/ImportFolderRadioButtonShared"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ImportRadioButtonPublicFolder" />
        </RadioGroup>

        <TableLayout android:id="@+id/TableLayout01"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:shrinkColumns="1">

            <TableRow android:id="@+id/ImportTableRowFileDirectory"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="3sp">
                <TextView android:text="@string/ImportTextDirectory"
                  android:id="@+id/ImportTextDirectory"
                  android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:gravity="center_vertical"
                  android:textColor="@color/black">
                </TextView>
                <EditText android:text=""
                  android:id="@+id/ImportEditTextDirectory"
                  android:hint="@string/ImportEditDirectoryHint"
                  android:layout_width="fill_parent"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:inputType="text|textNoSuggestions|textMultiLine"
                  android:enabled="false"
                  android:importantForAutofill="no">
                </EditText>
            </TableRow>
            <TableRow android:id="@+id/TableRowFileName"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:padding="3sp">
		<TextView android:text="@string/ImportTextFile"
		 android:id="@+id/ImportTextFile"
		 android:layout_width="wrap_content"
		 android:layout_height="fill_parent"
		 android:gravity="center_vertical"
		 android:textColor="@color/black">
		</TextView>
		<EditText android:text=""
		 android:id="@+id/ImportEditTextFile"
                 android:hint="@string/ImportEditFileHint"
		 android:layout_width="fill_parent"
		 android:layout_weight="1"
		 android:layout_height="wrap_content"
		 android:inputType="text|textNoSuggestions|textMultiLine"
                 android:importantForAutofill="no">
		</EditText>
	    </TableRow>

	    <TableRow android:id="@+id/TableRowImportType"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:padding="3sp">
		<TextView android:text="@string/ImportTextImportType"
		 android:id="@+id/ImportTextImportType"
		 android:layout_width="wrap_content"
		 android:layout_height="fill_parent"
		 android:singleLine="false"
		 android:gravity="center_vertical"
		 android:textColor="@color/black">
		</TextView>
		<Spinner android:layout_height="wrap_content"
		 android:layout_width="fill_parent"
		 android:layout_weight="1"
		 android:id="@+id/ImportSpinnerImportType">
		</Spinner>
	    </TableRow>

	    <TableRow android:id="@+id/TableRowPrivate"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:padding="3sp">
		<TextView android:text="@string/ImportTextIncludePrivate"
		 android:id="@+id/ImportTextIncludePrivate"
		 android:layout_width="wrap_content"
		 android:layout_height="fill_parent"
		 android:gravity="center_vertical"
		 android:textColor="@color/black">
		</TextView>
		<CheckBox android:id="@+id/ImportCheckBoxIncludePrivate"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content">
		</CheckBox>
	    </TableRow>

	    <TableRow android:id="@+id/TableRowPassword"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:padding="3sp">
		<TextView android:text="@string/ImportTextPassword"
		 android:id="@+id/ImportTextPassword"
		 android:layout_width="wrap_content"
		 android:layout_height="fill_parent"
		 android:singleLine="false"
		 android:gravity="center_vertical"
		 android:textColor="@color/black">
		</TextView>
		<EditText android:text=""
		 android:id="@+id/ImportEditTextPassword"
                 android:hint="@string/ImportEditPasswordHint"
		 android:layout_width="fill_parent"
		 android:layout_weight="1"
		 android:layout_height="wrap_content"
		 android:inputType="text|textPassword"
                 android:importantForAutofill="no">
		</EditText>
	    </TableRow>

	    <TableRow android:id="@+id/TableRowPasswordNotSetWarning"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:gravity="center_horizontal"
	     android:padding="3sp"
	     android:visibility="visible">
		<TextView android:text="@string/ImportTextPasswordNotSetWarning"
		 android:id="@+id/ImportTextPasswordNotSetWarning"
		 android:layout_width="wrap_content"
		 android:layout_span="2"
		 android:layout_height="fill_parent"
		 android:singleLine="false"
		 android:textColor="@color/black"
		 android:gravity="center_vertical|center_horizontal">
		</TextView>
	    </TableRow>

	    <TableRow android:id="@+id/TableRowShowPassword"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:padding="3sp">
		<TextView android:text="@string/ImportTextShowPassword"
		 android:id="@+id/ImportTextShowPassword"
		 android:layout_width="wrap_content"
		 android:layout_height="fill_parent"
		 android:gravity="center_vertical"
		 android:textColor="@color/black">
		</TextView>
		<CheckBox android:id="@+id/ImportCheckBoxShowPassword"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content">
		</CheckBox>
	    </TableRow>
	</TableLayout>

	<LinearLayout android:id="@+id/LinearLayout02"
	 android:orientation="horizontal"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <Button android:text="@string/ImportButtonOK"
	     android:id="@+id/ImportButtonOK"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_weight="1">
	    </Button>

	    <Button android:text="@string/ImportButtonCancel"
	     android:id="@+id/ImportButtonCancel"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_weight="1">
	    </Button>
	</LinearLayout>

	<ProgressBar android:id="@+id/ImportProgressBar"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 style="@android:style/Widget.ProgressBar.Horizontal"
	 android:progress="50">
	</ProgressBar>

	<TextView android:id="@+id/ImportTextProgressMessage"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:textColor="@color/black">
	</TextView>
    </LinearLayout>
</ScrollView>
