<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@color/white"
  android:orientation="vertical"
  android:scrollbars="vertical"
  android:scrollbarAlwaysDrawVerticalTrack="false"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/LinearLayout01"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">

        <RadioGroup android:id="@+id/ImportFolderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/ExportFolderRadioButtonPrivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ExportRadioButtonPrivateFolder"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/ExportFolderRadioButtonShared"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ExportRadioButtonPublicFolder" />
        </RadioGroup>

	<TableLayout android:id="@+id/TableLayout01"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:shrinkColumns="1">

            <TableRow android:id="@+id/ExportTableRowFileDirectory"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="3sp">
                <TextView android:text="@string/ExportTextDirectory"
                  android:id="@+id/ExportTextDirectory"
                  android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:gravity="center_vertical"
                  android:textColor="@color/black">
                </TextView>
                <EditText android:text=""
                  android:id="@+id/ExportEditTextDirectory"
                  android:hint="@string/ExportEditDirectoryHint"
                  android:layout_width="fill_parent"
                  android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:inputType="text|textNoSuggestions|textMultiLine"
                  android:enabled="false"
                  android:importantForAutofill="no">
                </EditText>
            </TableRow>
	    <TableRow android:id="@+id/TableRowFileName"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:padding="3sp">
		<TextView android:text="@string/ExportTextFile"
		 android:id="@+id/ExportTextFile"
		 android:layout_width="wrap_content"
		 android:layout_height="fill_parent"
		 android:gravity="center_vertical"
		 android:textColor="@color/black">
		</TextView>
		<EditText android:text=""
                 android:hint="@string/ExportEditFileHint"
		 android:id="@+id/ExportEditTextFile"
		 android:layout_width="fill_parent"
		 android:layout_weight="1"
		 android:layout_height="wrap_content"
		 android:inputType="text|textNoSuggestions|textMultiLine"
                 android:importantForAutofill="no">
		</EditText>
	    </TableRow>

	    <TableRow android:id="@+id/TableRowPrivate"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:padding="3sp">
		<TextView android:text="@string/ExportTextIncludePrivate"
		 android:id="@+id/ExportTextShowPassword"
		 android:layout_width="wrap_content"
		 android:layout_height="fill_parent"
		 android:gravity="center_vertical"
		 android:textColor="@color/black">
		</TextView>
		<CheckBox android:id="@+id/ExportCheckBoxIncludePrivate"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content">
		</CheckBox>
	    </TableRow>

	    <TableRow android:id="@+id/TableRowPasswordNotSetWarning"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:gravity="center_horizontal"
	     android:padding="3sp"
	     android:visibility="visible">
		<TextView android:text="@string/ExportTextPasswordNotSetWarning"
		 android:id="@+id/ExportTextPasswordNotSetWarning"
		 android:layout_width="wrap_content"
		 android:layout_span="2"
		 android:layout_height="fill_parent"
		 android:singleLine="false"
		 android:textColor="@color/black"
		 android:gravity="center_vertical|center_horizontal">
		</TextView>
	    </TableRow>
	</TableLayout>

	<LinearLayout android:id="@+id/LinearLayout02"
	 android:orientation="horizontal"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content">
	    <Button android:text="@string/ExportButtonOK"
	     android:id="@+id/ExportButtonOK"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_weight="1">
	    </Button>

	    <Button android:text="@string/ExportButtonCancel"
	     android:id="@+id/ExportButtonCancel"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_weight="1">
	    </Button>
	</LinearLayout>

	<ProgressBar android:id="@+id/ExportProgressBar"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 style="@android:style/Widget.ProgressBar.Horizontal"
	 android:progress="50">
	</ProgressBar>

	<TextView android:id="@+id/ExportTextProgressMessage"
	 android:layout_width="fill_parent"
	 android:layout_height="wrap_content"
	 android:textColor="@color/black">
	</TextView>
    </LinearLayout>
</ScrollView>
