<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/LinearLayoutNote01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:fitsSystemWindows="true">
        <Button android:text="@string/NoteButtonOK"
            android:id="@+id/NoteButtonOK"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1">
        </Button>
        <Button android:text="@string/NoteButtonDelete"
            android:id="@+id/NoteButtonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </Button>
    </LinearLayout>

    <com.xmission.trevin.android.todo.ui.ScrollBar
        android:id="@+id/NoteScrollBar"
        android:layout_above="@id/LinearLayoutNote01"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="24dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:thumbType="scaled"
        app:minLength="0.5"
        app:contentSize="0"
        app:viewSize="1"
        android:visibility="gone"/>

    <com.xmission.trevin.android.todo.ui.ObservableEditText
        android:id="@+id/NoteEditText"
        android:layout_above="@id/LinearLayoutNote01"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/NoteScrollBar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="top|start"
        android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textLongMessage"
        android:hint="@string/NotePlaceholder"
        android:background="@color/invisible">
        <requestFocus/>
    </com.xmission.trevin.android.todo.ui.ObservableEditText>

</RelativeLayout>
