<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PasswordLayoutRoot"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="false">
    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TableLayout android:id="@+id/TableLayout01"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TableRow android:id="@+id/TableRowOldPassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:visibility="gone">
                <TextView android:id="@+id/TextView01"
                    android:gravity="end|center_vertical"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/DialogOldPassword"
                    android:labelFor="@id/EditTextOldPassword"/>
                <EditText android:id="@+id/EditTextOldPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>
            </TableRow>

            <TableRow android:id="@+id/TableRow02"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView android:id="@+id/TextView02"
                    android:gravity="end|center_vertical"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/DialogNewPassword"
                    android:labelFor="@id/EditTextNewPassword"/>
                <EditText android:id="@+id/EditTextNewPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>
            </TableRow>

            <TableRow android:id="@+id/TableRow03"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView android:id="@+id/TextView03"
                    android:gravity="end|center_vertical"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/DialogConfirmPassword"
                    android:labelFor="@id/EditTextConfirmPassword"/>
                <EditText android:id="@+id/EditTextConfirmPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:autofillHints="password"/>
            </TableRow>
        </TableLayout>

        <CheckBox android:id="@+id/CheckBoxShowPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/DialogShowPassword"/>
    </LinearLayout>
</ScrollView>
